<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quiz.devsoftware.quiz.MainActivity"
    android:background="@drawable/india">



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeLayoutHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/headingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/indian_culteural_quiz"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/firstQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/firstQuestionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/firstOptionOfQuestionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/firstOptionOfQuestionOne"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/secondOptionOfQuestionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/secondOptionOfQuestionOne"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/thirdOptionOfQuestionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/thirdOptionOfQuestionOne"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fourthOptionOfQuestionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/fourtOptionOfQuestionOne"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/secondQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/secondQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/secondQuestionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/firstOptionOfQuestionSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/firstoptionOfSecondQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/secondOptionOfQuestionSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/secondOptionOfSecondQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/thirdOptionOfQuestionSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/thirdOptionOfSecondQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fourthOptionOfQuestionSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/fourtOptionOfSecondQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/thirdQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/thirdQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/thirdQuestionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/firstOptionOfQuestionThird"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/firstoptionOfThirdQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/secondOptionOfQuestionThird"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/secondOptionOfThirddQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/thirdOptionOfQuestionThird"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/thirdOptionOfThirdQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fourthOptionOfQuestionThird"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/fourtOptionOfThirdQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/fourthQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/fourthQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/fourthQuestionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/firstOptionOfQuestionFourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/firstoptionOfFourthQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/secondOptionOfQuestionFourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/secondOptionOfFourthQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/thirdOptionOfQuestionFourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/thirdOptionOfFourthQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fourthOptionOfQuestionFourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:checked="false"
                        android:text="@string/fourtOptionOfFourthQuestion"
                        android:textAllCaps="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/fifthQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/fifthQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/fifthQuestionAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextHint"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sixthQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/sixthQuestion"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/bhagatSingh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="0dp"
                    android:text="@string/bhagat_singh"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/ramPrasadBismil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/ramPrasadBismil"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/mahatmaGandhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/mahatmaGandhi"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/jawaharlalNehru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/jawaharlalNehru"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submitButton"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:onClick="quizScore"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
